--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -34,6 +35,7 @@
     "@types/react": "18.0.27",
     "babel-loader": "^9.1.2",
     "commitizen": "^4.3.0",
+    "@types/styled-components": "^5.1.26",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
